Boycho's jumping fixed (kinda). Ammo typings improved by a liiitle

--- a/ProjectThralldom/app.less
+++ b/ProjectThralldom/app.less
@@ -98,6 +98,11 @@ progress[value]::-moz-progress-bar {
 }
 nav {
     color: white;
+    pre {
+        margin: 5% 0% 0% 3%;
+        font-family: @font-body;
+        font-size: 120%;
+    }
 }
 #crosshair {
     background-image: url(Content/Textures/Crosshair.png);
